# automigrate_template

alembic/: env.py
alembic/versions/: e749a2c950b1_.py
data/: config.py
src/: a.py  connection.py  main.py  models.py  pyproject.toml
