[tool.poetry]
name = "fast_api_tutorial"
version = "0.1.0"
description = ""
authors = ["dopefresh <dopefresh4000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.65.2"}
pydantic = "^1.8.2"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.20"
alembic = "^1.6.5"
loguru = "^0.5.3"
environs = "^9.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
